# reliability-first-ai-ml-model-quality-framework

./: .gitattributes  .gitignore  05_run_transformer_3seed_stability_audit.ps1  06_run_class_weighted_transformer_3seed_challenger.ps1  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_RUNNABILITY_VALIDATION.md  LOCAL_GITHUB_RUNNABLE_AUDIT.md  MONTE_CARLO_VALIDATION.md  Makefile  PUBLIC_DATA_SMALL_SAMPLE_VALIDATION.md  README.md  SECURITY.md  SMALL_DATA_VALIDATION.md  STRENGTHENING_LOOP_REPORT.md  pyproject.toml  requirements-ci.txt  requirements-core.txt  requirements-gpu.txt  requirements.txt  run_cfpb_gpu_validation.ps1  run_end_to_end_model_quality.ps1
configs/: data_quality_rules.yaml  data_sources.yaml  drift_scenarios.yaml  evidence_quality.yaml  launch_gate.yaml  model_selection.yaml  model_zoo.yaml  monte_carlo.yaml  product_taxonomy.yaml
dashboard/: app.py
docs/: ARCHITECTURE.md  CLAIM_BOUNDARIES.md  EXPERIMENTAL_EVIDENCE.md  FINAL_MODEL_DECISION.md  GITHUB_RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  SELECTION_TEST_LAUNCH_SEMANTICS.md  cleanup_report.json  gitignore_verification.csv  initial_commit_file_audit.csv  release_readiness.json  tracked_large_file_audit.csv
reports/: calibration_report.md  data_card.md  data_quality_report.md  drift_report.md  evidence_quality_report.md  executive_summary.md  genai_telemetry_report.md  launch_decision_memo.md  model_card.md  model_quality_report.md  split_integrity_report.md
scripts/: dataset_preflight.py  finalize_selection_launch_semantics.py  gpu_preflight.py  project_audit.py  run_dataset_audit.py  (+4 more)
(+86 files in other folders)
