[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability-first-ai-ml-model-quality-framework"
version = "0.6.0"
description = "Local-runnable AI/ML model-quality sign-off framework with MLflow, Monte Carlo stress validation, drift, calibration, CrossEncoder evidence quality, and launch gates."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "scipy>=1.10,<2",
  "joblib>=1.3,<2",
  "PyYAML>=6.0,<7",
  "tabulate>=0.9,<1",
  "duckdb>=1.1,<2",
]

[project.optional-dependencies]
full = [
  "matplotlib>=3.7,<4",
  "mlflow>=2.12,<4",
  "lightgbm>=4.0,<5",
  "streamlit>=1.35,<2",
  "py7zr>=0.21,<2",
]
dev = ["pytest>=8.0,<9", "ruff>=0.6,<1"]
gpu = [
  "torch>=2.2,<3",
  "transformers>=4.40,<6",
  "datasets>=2.19,<5",
  "sentence-transformers>=3.0,<6",
  "accelerate>=1.1,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
